--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Team EAAR
 description: Team EAAR Repository
 github_username: nighthawkcoders
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "TeamOrbOrb"
+github_repo: "Team-EAAR"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
@@ -34,7 +34,7 @@ url: "https://nighthawkcoders.github.io" # the base hostname & protocol for your
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/TeamOrbOrb" # the subpath of your site, e.g. "/blog".
+baseurl: "/Team-EAAR" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
